add assign role end point
