# Internal/dtos/success_response.go
@@ -1,0 +1,7 @@
+package dtos
+
+// SuccessResponse represents a standard Success response
+// swagger:model SuccesssResponse
+type SuccessResponse struct {
+	Message string `json:"message"`
+}
